--- a/components/AnimeInfo/AnimeInfo.module.css
+++ b/components/AnimeInfo/AnimeInfo.module.css
@@ -142,6 +142,7 @@
   font-size: 1.3em;
   font-weight: 500;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .showDescription button:nth-child(5) {
